--- a/crud application.html
+++ b/crud application.html
@@ -12,7 +12,7 @@ om sharano mallanna
 		<table class="table table-striped table-bordered">
 			<tr>
 				<td style="width: 181px;">
-				<label>Student ID<label>
+				<label>Student name<label>
 				</td>
 				<td>
 				<input type="text" ng-model=" newcontact.ID "required>
